[project]
name = "chat-orchestrator"
version = "0.1.0"
description = "A simple and extensible chat orchestrator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "requests>=2.32.3",
]

[project.optional-dependencies]
mongo = ["pymongo>=4.13.2"]
redis = ["redis>=6.2.0"]

[tool.setuptools]
packages = ["chat_orchestrator"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["ruff>=0.11.7"]
