[project]
name = "chat-orchestrator"
version = "0.3.0"
description = "A simple and extensible chat orchestrator"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "loguru>=0.7.3",
    "requests>=2.32.3",
]

[project.optional-dependencies]
mongo = ["pymongo>=4.13.2"]
redis = ["redis>=6.2.0"]

[dependency-groups]
dev = ["ruff>=0.11.7"]
